# upbit-listing-detector

./: .env.example  .gitignore  CLIENT_GUIDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  config.toml  docker-compose.yml
src/: config.rs  main.rs  stats.rs
src/alerts/: discord.rs  telegram.rs
src/cache/: redis.rs
src/detectors/: market_api.rs  mod.rs  notice_api.rs  websocket.rs
src/filters/: keywords.rs  mod.rs  parser.rs
src/trading/: binance.rs  bybit.rs  exchange.rs  executor.rs  mod.rs  position.rs  signing.rs
systemd/: upbit-detector.service
