[package]
name = "upbit-listing-detector"
version = "0.1.0"
edition = "2021"
description = "Real-time Upbit cryptocurrency listing detection system"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
toml = "0.8"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
